mudando estrutura de arquivos

--- a/README
+++ b/README
@@ -1,9 +1,8 @@
 INF390 - Trabalho 2
 
-
-Alunos: Matheus Ferreira Nunes - 92537
-	Mayke Daniel de Oliveira Moreira - 82873
-
+Alunos:
+Matheus Ferreira Nunes - 92537
+Mayke Daniel de Oliveira Moreira - 82873
 
 Fontes de consultas utilizadas:
 
@@ -19,8 +18,9 @@ http://jeromebelleman.gitlab.io/posts/devops/gltext/
 https://community.khronos.org/t/glutsolidcube-has-anyone-used-this/30997/4
 https://community.khronos.org/t/color-tables/22518
 https://www.inf.pucrs.br/~manssour/OpenGL/Programando3D.html
+
 Slides de INF 390
 Consulta ao monitor Gustavo
-
+Discussão com os alunos Leandro, Westerley, e Amanda
 
 Informações adicionais do jogo: Fauna marinha exótica adicionada
