--- a/README
+++ b/README
@@ -21,3 +21,7 @@ Consulta ao monitor Gustavo
 Discutimos sobre o trabalho com os alunos: Leandro, Westerley, David e Amanda.
 
 
+Observações: 
+-	O programa inicia com iluminação e efeitos de flat desativado.
+-	Para ativar o modo de iluminação 1 ou 2 é necessário ativar o modo iluminação antes (pressionando L ou l).
+
